--- a/package.json
+++ b/package.json
@@ -38,5 +38,6 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
     "typescript": "~4.9.4"
-  }
+  },
+  "homepage": "https://seft99.github.io/portfolio"
 }
