--- a/angular.json
+++ b/angular.json
@@ -20,6 +20,7 @@
             "outputPath": "dist/portafolio-seft",
             "index": "src/index.html",
             "main": "src/main.ts",
+            "baseHref": "/",
             "polyfills": [
               "zone.js"
             ],
