--- a/package.json
+++ b/package.json
@@ -39,5 +39,5 @@
     "karma-jasmine-html-reporter": "~2.0.0",
     "typescript": "~4.9.4"
   },
-  "homepage": "https://seft99.github.io/portfolio"
+  "homepage": "https://seft99.github.io"
 }
