--- a/angular.json
+++ b/angular.json
@@ -17,9 +17,9 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/portafolio-seft",
+            "outputPath": "dist/",
             "index": "src/index.html",
-            "main": "src/main.ts",
+            "main": "src/",
             "baseHref": "/",
             "polyfills": [
               "zone.js"
